# CuEVM

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  job_slurm.sh
.devcontainer/: Dockerfile  Dockerfile.disabled  devcontainer.json
CuEVM/: CMakeLists.txt  precompile.cuh
CuEVM/include/CuEVM/: ecc.cuh  evm.cuh  evm_call_state.cuh  gas_cost.cuh  managed_trace.cuh  precompile.cuh  tracer.cuh
CuEVM/include/CuEVM/core/: block_info.cuh  byte_array.cuh  evm_word.cuh  jump_destinations.cuh  memory.cuh  message.cuh  return_data.cuh  stack.cuh  transaction.cuh
CuEVM/include/CuEVM/operations/: arithmetic.cuh  bitwise.cuh  block.cuh  compare.cuh  environmental.cuh  flow.cuh  log.cuh  memory.cuh  stack.cuh  storage.cuh  system.cuh
CuEVM/include/CuEVM/state/: access_state.cuh  account.cuh  account_flags.cuh  contract_storage.cuh  logs.cuh  state.cuh  state_access.cuh  storage.cuh  storage_element.cuh  touch_state.cuh  world_state.cuh
CuEVM/include/CuEVM/utils/: arith.cuh  cuda_utils.cuh  ecc_constants.cuh  error_codes.cuh  evm_defines.cuh  evm_utils.cuh  opcodes.cuh  python_utils.h
CuEVM/libraries/CGBN/: .gitignore  CMakeLists.txt
CuEVM/libraries/CGBN/.devcontainer/: Dockerfile  devcontainer.json
CuEVM/libraries/CGBN/CGBN/: CMakeLists.txt
CuEVM/libraries/CGBN/CGBN/cmake/: FindGMP.cmake
CuEVM/libraries/CGBN/CGBN/include/CGBN/: cgbn.h  cgbn_cuda.cuh  cgbn_mpz.cuh  utils.cuh
CuEVM/libraries/CGBN/CGBN/src/: cgbn_cuda.cu  cgbn_mpz.cu  utils.cu
CuEVM/libraries/CGBN/CGBN/src/core/: core_counting.cu  padded_resolver.cu
CuEVM/libraries/CGBN/tests/: test_add.cu
CuEVM/libraries/CuBigInt/: CMakeLists.txt  README  tests.c
CuEVM/libraries/CuBigInt/.devcontainer/: Dockerfile  devcontainer.json
CuEVM/libraries/CuBigInt/CuBigInt/: CMakeLists.txt
CuEVM/libraries/CuBigInt/CuBigInt/include/CuBigInt/: bigint.cuh
CuEVM/libraries/CuBigInt/CuBigInt/src/: bigint.cu
CuEVM/libraries/CuBigInt/tests/: test_cpu.cu  test_gpu.cu
CuEVM/libraries/CuCrypto/: .gitignore  CMakeLists.txt  LICENSE  README
CuEVM/libraries/CuCrypto/.devcontainer/: Dockerfile  devcontainer.json
CuEVM/libraries/CuCrypto/CuCrypto/: CMakeLists.txt
CuEVM/libraries/CuCrypto/CuCrypto/cmake/: Installing.cmake
CuEVM/libraries/CuCrypto/CuCrypto/include/CuCrypto/: keccak.cuh  ripemd160.cuh  sha256.cuh  utils.cuh
CuEVM/libraries/CuCrypto/CuCrypto/src/: keccak.cu  ripemd160.cu
CuEVM/libraries/CuCrypto/tests/: test_blake2.cu  test_keccak.cu  test_ripemd160.cu  test_sha256.cu
CuEVM/src/: ecc.cu  evm.cu  evm_call_state.cu  gas_cost.cu  precompile.cu  tracer.cu
CuEVM/src/core/: block_info.cu  byte_array.cu  evm_word.cu  jump_destinations.cu  managed_trace.cu  memory.cu  message.cu  stack.cu  transaction.cu
CuEVM/src/operations/: arithmetic.cu  bitwise.cu  block.cu  compare.cu  environmental.cu  flow.cu  log.cu  memory.cu  stack.cu  storage.cu  system.cu
CuEVM/src/state/: access_state.cu  account.cu  account_flags.cu  contract_storage.cu  logs.cu  state.cu  state_access.cu  storage.cu  storage_element.cu  touch_state.cu  world_state.cu
CuEVM/src/utils/: arith.cu  cuda_utils.cu  evm_utils.cu
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst  requirements.txt
docs_doxygen/: Doxyfile.in
docs_sphinx/: Doxyfile.in  conf.py  (+1 more)
libraries/CuCrypto/: CMakeLists.txt
libraries/CuCrypto/include/CuCrypto/: blake2.cuh  keccak.cuh  ripemd160.cuh  utils.cuh
libraries/CuCrypto/src/: blake2.cu  ripemd160.cu  sha256.cu
src/: CMakeLists.txt  access_state.cu  account.cu  alu_operations.cuh  arith.cu  arith.cuh  arithmetic_operations.cuh  bitwise_logic_operations.cuh  block.cu  block.cuh  block_info.cu  block_operations.cuh  byte_array.cu  contract.cuh  cu_evm.cu  cu_evm_interpreter.cu  cuevm.cu  cuevm_test.cu  data_content.cu  data_content.h  ecc.cuh  env_operations.cuh  environmental_operations.cuh  error_codes.h  evm.cu  evm.cuh  evm_call_state.cu  evm_utils.cu  evmcall.cuh  functionreturn.cuh  gas_cost.cu  gas_cost.h  internal_operations.cuh  interpreter.cu  jump_destinations.cu  jump_destinations.cuh  keccak.cuh  libcuevm.cu  logs.cuh  memory.cu  (+24 more)
src/blake2/: blake2-impl.h  blake2.cuh  blake2f.cuh
src/core/: block_info.cu  byte_array.cu  jump_destinations.cu  memory.cu  message.cu  stack.cu  transaction.cu
src/include/: access_state.cuh  account.cuh  arith.cuh  block.cuh  block_info.cuh  byte_array.cuh  cgbn_wrapper.h  data_content.cuh  data_content.h  error_codes.h  evm.cuh  evm_call_state.cuh  evm_defines.h  evm_utils.cuh  gas_cost.cuh  gas_cost.h  jump_destinations.cuh  memory.cuh  message.cuh  python_utils.cuh  python_utils.h  return_data.cuh  stack copy.cuh  stack.cuh  state.cuh  storage.cuh  tracer.cuh  transaction.cuh  utils.cuh  utils.h  world_state copy.cuh  world_state.cuh
src/include/core/: block_info.cuh  byte_array.cuh  jump_destinations.cuh  memory copy.cuh  memory.cuh  message.cuh  return_data.cuh  stack.cuh  transaction.cuh
src/include/operations/: arithmetic.cuh  bitwise.cuh  block.cuh  compare.cuh  environmental.cuh  flow.cuh  internal_operations.cuh  log.cuh  memory.cuh  stack.cuh  storage.cuh  system.cuh
src/include/state/: access_state.cuh  account.cuh  logs.cuh  state.cuh  storage.cuh  touch_state.cuh  world_state.cuh
src/include/utils/: arith.cuh  error_codes.cuh  evm_defines.cuh  evm_utils.cuh
src/no_cgbn/: cuevm.cu  cuevm_test.cu
src/no_cgbn/include/: cuevm_test.h  opcode.h  processor.cuh  stack.cuh
src/operations/: arithmetic.cu  bitwise.cu  block.cu  compare.cu  environmental.cu  flow.cu  log.cu  memory.cu  stack.cu  storage.cu  system.cu
src/state/: access_state.cu  account.cu  logs.cu  logs.cuh  state.cu  storage.cu  touch_state.cu  world_state.cu
src/test/: test_block.cu  test_cgbn.cu  test_cjson.c  test_cjson_evm.c  test_contract.cu  test_fixed_contract.cu  test_fixed_memory.cu  test_gmp.c  test_keccak.cu  test_local_storage.cu  test_logs.cu  test_memory.cu  test_message.cu  test_returns.cu  test_sha256.cu  test_stack.cu  test_state.cu  test_tracer.cu
src/utils/: arith.cu  cuda_utils.cu  evm_utils.cu
(+72 files in other folders)
